--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./img/logo-navegador.png" type="image/x-png">
 
     <!-- SEO Geral -->
-    <title>CS7 Uniformes Personalzados</title>
+    <title>CS7 Uniformes Personalizados</title>
     <meta name="description" content="Uniformes e Camisetas Profissionais Personalizados. Para Empresas, Escolas, Hospitais, Hotéis, Indústrias e Muito Mais. Confiro Nossa Linha Completa.">
     <link rel="canonical" href="https://www.camargosesantosuniformes.com.br/">
     <meta name="author" content="CS7 Camargos e Santos - Uniformes Personalizados">
