--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,15 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.camargosesantosuniformes.com.br/static/media/img-header.589393f4.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T1NZ1ED9SW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-T1NZ1ED9SW');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
