--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,16 @@
 
       gtag('config', 'G-T1NZ1ED9SW');
     </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 376107740 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-376107740"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-376107740');
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
